Added server property.

--- a/first-app/pom.xml
+++ b/first-app/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.boot.web</groupId>
 	<artifactId>first-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>first-app</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -19,11 +20,12 @@
 	</properties>
 
 	<dependencies>
+		<!-- develop any web application -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
